// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<CheckboxField
  checkboxStyle={undefined}
  containerStyle={undefined}
  defaultColor="white"
  onSelect={undefined}
  selected={undefined}
  selectedColor="#1995ea"
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</CheckboxField>
`;

exports[`renders background color when checked 1`] = `
<CheckboxField
  checkboxStyle={undefined}
  containerStyle={undefined}
  defaultColor="white"
  onSelect={undefined}
  selected={true}
  selectedColor="#1995ea"
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</CheckboxField>
`;
